<resources>
    <string name="app_name">TS Raksha Admin</string>
    <string name="login_button">LOGIN</string>
    <string name="enter_name">Registered name</string>
    <string name="enter_email">Registered email</string>
    <string name="enter_password">Password</string>
    <string name="update_cases">Update Cases</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="telangana">Telangana</string>
    <string name="confirmed">Confirmed</string>
    <string name="no_info">-----</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>
    <string name="india">India</string>
    <string name="global">Global</string>
    <string name="dashboard">Dashboard</string>
    <string name="save">Save</string>
    <string name="isolation_centers">Isolation Centers</string>
    <string name="quarantine_centers">Quarantine Centers</string>
    <string name="testing_centers">Testing Centers</string>
    <string name="government">Government</string>
    <string name="privates">Private</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="hospital_location">Hospital Location</string>
    <string name="hospital_latitude">Latitude</string>
    <string name="hospital_longitude">Longitude</string>
    <string name="cancel">Cancel</string>
    <string name="updated">Details updated successfully</string>
    <string name="faqs">FAQ\'s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="government_orders">Government Orders</string>
    <string name="video_updates">Video Updates</string>
    <string name="title">Title</string>
    <string name="url">Url</string>
    <string name="date">Select Date</string>
    <string name="time">Select Time</string>
    <string name="rt">RT-PCR / CBNAAT / TRUENAT</string>
    <string name="anti">RAPID ANTIGEN TESTING CENTRES</string>
    <string name="type_of_test">Type of Test</string>
    <string name="type_test">Type of test :</string>
    <string name="district_name">District Name</string>
    <string name="enter_districts">Enter Districts</string>
    <string name="technical_support">Technical Support</string>
    <string name="phone1">Phone1</string>
    <string name="phone2">Phone2</string>
    <string name="enter_helpline_email">Email</string>


</resources>
