<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="textCapWords"
        android:id="@+id/enter_helpline_title"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone1"
        android:inputType="number"
        android:id="@+id/enter_helpline_phone1"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone2"
        android:inputType="number"
        android:id="@+id/enter_helpline_phone2"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_helpline_email"
        android:inputType="textEmailAddress"
        android:id="@+id/enter_helpline_email"
        />

</LinearLayout>