<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/go_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:lines="10"/>

    <EditText
        android:id="@+id/go_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"/>
    <Button
        android:id="@+id/go_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/date"/>

</LinearLayout>