<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/vid_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:hint="@string/title"/>
    <EditText
        android:id="@+id/vid_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:hint="@string/url"/>
    <Button
        android:id="@+id/vid_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/date"/>

</LinearLayout>