<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/logo_app_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/logo_app_name"
            android:orientation="vertical"
            android:visibility="visible">


            <EditText
                android:id="@+id/enter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_background"
                android:hint="@string/enter_name"
                android:inputType="textCapWords"
                android:maxLength="35"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_background"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLength="35"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_background"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="35"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:backgroundTint="#0000FF"
                android:foreground="?android:attr/selectableItemBackground"
                android:soundEffectsEnabled="true"
                android:text="@string/login_button"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>


</ScrollView>